Name:           aern2-net
Version:        0.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny, Eike Neumann (Aston University)
Copyright:      (c) 2015 Michal Konecny, Eike Neumann
Maintainer:     mikkonecny@gmail.com
Homepage:       https://github.com/michalkonecny/aern2
Stability:      experimental
Category:       Data, Math
Synopsis:       compare real function representations
Tested-with:    GHC==7.8.4
Description:    Define and compare various representations of univariate continuous real functions.

library
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall  -fno-warn-orphans
  Build-Depends:   
        base >= 4.4,
        containers >= 0.3,
        aern2-real,
        fgl,
        stm
  extensions:      
                   MultiParamTypeClasses, 
                   OverloadedStrings, 
                   RebindableSyntax, 
                   TypeFamilies
  exposed-modules: AERN2.Net
  other-modules:   
                   AERN2.Net.Spec,
                   AERN2.Net.Spec.Arrow

