name:           aern2-num
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.8.4
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2
synopsis:       Real numbers and their interval/ball approximations
category:       Math
copyright:      Michal Konecny, Pieter Collins, 2015
license-file:   LICENSE

library
  hs-source-dirs:  src
  build-depends:   
    base >= 4 && <5,
    ieee-utils-tempfix >= 0.4,
    convertible >= 1.1,
    haskell-mpfr,
    arithmoi,
    containers
  ghc-options:     -O2 -Wall  -fno-warn-orphans
  extensions:      
                   MultiParamTypeClasses, 
                   OverloadedStrings, 
                   RebindableSyntax, 
                   TypeFamilies
  exposed-modules: AERN2.Num
  other-modules:   
                   AERN2.Num.Accuracy,
                   AERN2.Num.CauchyReal,
                   AERN2.Num.Complex,
                   AERN2.Num.ErrorBound,
                   AERN2.Num.Examples,
                   AERN2.Num.IntegerRational,
                   AERN2.Num.MPBall,
                   AERN2.Num.MPFloat,
                   AERN2.Num.Norm,
                   AERN2.Num.Operations,
                   AERN2.Num.SymbolicArrow

