name:           aern2-real
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.8.4
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2
synopsis:       Real numbers and their interval/ball approximations
category:       Math
copyright:      Michal Konecny, Pieter Collins, 2015
license-file:   LICENSE

library
  hs-source-dirs:  src
  build-depends:   
    base >= 4 && <5,
    ieee-utils-tempfix >= 0.4,
    convertible >= 1.1,
    haskell-mpfr,
    arithmoi
  ghc-options:     -O2 -Wall  -fno-warn-orphans
  exposed-modules: 
    AERN2.Real.Operations,
    AERN2.Real.IntegerRational,
    AERN2.Real.DoubleBound,
    AERN2.Real.MPFloat,
    AERN2.Real.Examples,
    AERN2.Real.CauchyReal,
    AERN2.Real.MPBall
  extensions:      
                   MultiParamTypeClasses, 
                   RebindableSyntax, 
                   TypeFamilies

