name:           aern2-real
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2/aern2-real
synopsis:       Exact real numbers via Cauchy sequences and MPFR
category:       Math
copyright:      (c) 2015, 2016 Michal Konecny
license-file:   LICENSE
Description:
  TODO

library
  hs-source-dirs:  src
  build-depends:
    base == 4.*
    , containers == 0.5.*
    -- , arithmoi == 0.4.*
    -- , convertible >= 1.1.1.0 && < 1.2
    , hspec >= 2.1 && < 2.3
    -- , hspec-smallcheck >= 0.3 && < 0.5
    , QuickCheck >= 2.7 && < 2.9
    , transformers >= 0.4 && < 0.6
    , mixed-types-num == 0.1.*
    , num-exceptions == 0.1.*
    , aern2-mp == 0.1.*
    , lens == 4.13.*
  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    GeneralizedNewtypeDeriving,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    Arrows
  exposed-modules:
    AERN2.Real
    AERN2.Real.Type
    AERN2.Real.Aux
    AERN2.Real.Comparison
    AERN2.Real.Ring
    AERN2.Real.Field
    AERN2.Real.Elementary
    AERN2.Real.Tests
    AERN2.QA
    AERN2.Effort

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    FlexibleContexts
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
    base == 4.*
    -- , mixed-types-num
    -- , aern2-mp
    , aern2-real
    , hspec >= 2.1 && < 2.3
    -- , hspec-smallcheck >= 0.3 && < 0.5
    , QuickCheck >= 2.7 && < 2.9
