name:           distributed-pilot
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Michal Konečný
maintainer:     mikkonecny@gmail.com
category:       Network
build-type:     Simple
cabal-version:  >=1.10

executable distributed-pilot
  build-depends:   
    base >= 4,
    network-transport-tcp,
    network-transport,
    distributed-process,
    distributed-process-simplelocalnet,
    binary,
    random,
    stm,
    containers,
    mtl
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is: Main.hs
  default-language: Haskell2010
  other-modules: Test

