name:           mixed-types-num
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.10.3
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2/mixed-types-num
synopsis:       Alternative to Prelude Num deriving types bottom-up.
category:       Math
copyright:      (c) 2015, 2016 Michal Konecny, Pieter Collins
license-file:   LICENSE

library
  hs-source-dirs:  src
  build-depends:
    base >= 4 && <5,
    convertible >= 1.1.1.0 && < 1.2
  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances
  exposed-modules:
    Numeric.MixedTypes
    Numeric.MixedTypes.Literals
    Numeric.MixedTypes.Bool
    Numeric.MixedTypes.EqOrd
    -- Numeric.MixedTypes.MinMaxAbs
    -- Numeric.MixedTypes.AddSub
    -- Numeric.MixedTypes.RingPow
    -- Numeric.MixedTypes.Field
    -- Numeric.MixedTypes.Elem
