name:           mixed-types-num
version:        0.1
cabal-version:  >= 1.9.2
build-type:     Simple
author:         Michal Konecny
stability:      experimental
maintainer:     Michal Konecny <mikkonecny@gmail.com>
tested-with:    GHC==7.10.3
license:        BSD3
homepage:       https://github.com/michalkonecny/aern2/mixed-types-num
synopsis:       Alternative to Prelude Num deriving types bottom-up.
category:       Math
copyright:      (c) 2015, 2016 Michal Konecny, Pieter Collins
license-file:   LICENSE
Description:
    This package provides a version of Prelude where
    binary and unary operations such as @+@, @==@, @not@
    have their result type derived from the parameter type(s),
    allowing, /e.g./:
    .
      * dividing an integer by an integer, giving a rational:
      .
      @x = 1/3 :: Rational@
    .
      * adding an integer and a rational, giving a rational:
      .
      @(length [x])+1/3 :: Rational@
    .
      * comparing an integer with an (exact) real number, giving a Maybe Bool:
      .
      @if (isCertainlyTrue (x > 1)) then ...@
      .
      (Exact real numbers are not provided by this package.
        They are provided, /e.g./, by aern2-real.)

library
  hs-source-dirs:  src
  build-depends:
    base == 4.*,
    convertible >= 1.1.1.0 && < 1.2
  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances
  exposed-modules:
    Numeric.MixedTypes
    Numeric.MixedTypes.Literals
    Numeric.MixedTypes.Bool
    Numeric.MixedTypes.EqOrd
    -- Numeric.MixedTypes.MinMaxAbs
    -- Numeric.MixedTypes.AddSub
    -- Numeric.MixedTypes.RingPow
    -- Numeric.MixedTypes.Field
    -- Numeric.MixedTypes.Elem

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  extensions:
    RebindableSyntax,
    PostfixOperators
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
    base == 4.*
    , mixed-types-num
    , hspec == 2.*
    , QuickCheck == 2.8.*
