Name:           resultsCsvToCharts
Version:        0.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2016 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       https://github.com/michalkonecny/aern2
Stability:      experimental
Category:       Data, Math
Synopsis:       render data from aern2-fnreps as charts
Tested-with:    GHC==7.8.4
Description:    render data from aern2-fnreps as charts

executable resultsCsvToCharts
  build-depends:   
                   base >= 4.4,
                   containers,
                   Chart,
                   Chart-diagrams,
                   lens
  hs-source-dirs:  .
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
